# deadlock-assets-api

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  docker-compose.yaml  extract_game_files.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: docker-image-staging.yaml  docker-image.yaml  lint-dockerfiles.yaml  pre-commit.yaml  secret-scanner.yaml
deadlock_assets_api/: draw_minimap.py  glob.py  main.py  parse_game_data.py  parse_vdata.py  utils.py
deadlock_assets_api/models/: ability.py  colors.py  component.py  generic_data.py  hero.py  item.py  languages.py  map.py  map_data.py  map_lanes.py  steam_info.py  utils.py
deadlock_assets_api/parsers/: abilities.py  generic_data.py  heroes.py  items.py
deadlock_assets_api/routes/: base.py  raw.py  v1.py  v2.py
res/: abilities.json  ability_icons.css  citadel_shared_colors.css  components.json  generic_data.json  generic_data.vdata  heroes.json  items.json  objectives_map.css  raw_generic_data.json  raw_heroes.json
res/localization/: citadel_gc_brazilian.json  citadel_gc_czech.json  citadel_gc_english.json  citadel_gc_french.json  citadel_gc_german.json  citadel_gc_italian.json  citadel_gc_koreana.json  citadel_gc_latam.json  citadel_gc_polish.json  citadel_gc_russian.json  citadel_gc_schinese.json  citadel_gc_spanish.json  citadel_gc_thai.json  citadel_gc_turkish.json  citadel_gc_ukrainian.json  citadel_heroes_brazilian.json  citadel_heroes_czech.json  citadel_heroes_english.json  citadel_heroes_french.json  citadel_heroes_german.json  citadel_heroes_indonesian.json  citadel_heroes_italian.json  citadel_heroes_koreana.json  citadel_heroes_latam.json  citadel_heroes_polish.json  citadel_heroes_russian.json  citadel_heroes_schinese.json  citadel_heroes_spanish.json  citadel_heroes_thai.json  citadel_heroes_turkish.json  citadel_heroes_ukrainian.json  citadel_main_czech.json  citadel_main_english.json  citadel_main_french.json  citadel_main_german.json  citadel_main_indonesian.json  citadel_main_koreana.json  citadel_main_latam.json  citadel_main_polish.json  (+14 more)
(+901 files in other folders)
