[tool.poetry]
name = "deadlock-assets-api"
version = "0.1.0"
description = ""
authors = ["Manuel Raimann <raimannma@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.114.2" }
murmurhash2 = "^0.2.10"
prometheus-fastapi-instrumentator = "^7.0.0"
css-parser = "^1.0.10"
stringcase = "^1.2.0"
protobuf = "^5.28.3"

[tool.poetry.group.parse.dependencies]
kv3parser = "^1.1"
vdf = "^3.4"
shapely = "^2.0.6"
matplotlib = "^3.9.2"
shapelysmooth = "^0.2.1"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
