[project]
name = "deadlock-assets-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Manuel Raimann", email = "raimannma@outlook.de" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "css-parser>=1.0.10",
    "fastapi>=0.115.5",
    "granian<1.7.0",
    "murmurhash2>=0.2.10",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "stringcase>=1.2.0",
]

[dependency-groups]
parse = [
    "kv3parser>=1.1",
    "matplotlib>=3.9.3",
    "opencv-python>=4.10.0.84",
    "shapely>=2.0.6",
    "vdf>=3.4",
]
dev = [
    "ruff>=0.8.1",
]

[tool.ruff]
line-length = 100
